add logo automaserv - logo sobralnet - foto dara - foto raul - ofician de 'o que todo designer deveria saber'

--- a/index.html
+++ b/index.html
@@ -350,6 +350,37 @@
                     </div>
                 </div>
 
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="img-circle" src="img/palestrantes/raulFontenele.jpg" alt="">
+                        <h4>Raul Fontenele</h4>
+                        <p class="text-muted"></p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.linkedin.com/in/raul-fontenele-b12b09139/">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="img-circle" src="img/palestrantes/dara ingrid.jpg" alt="">
+                        <h4>Dara Ingrid</h4>
+                        <p class="text-muted"></p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.linkedin.com/in/daraferreira/ ">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
                 <div class="col-sm-4"></div>
 
                 <div class="col-sm-4">
@@ -642,9 +673,6 @@
                 </div>
 
 
-
-
-
                 <div class="row row-linha">
                     <div class="col-md-10 text-left">
                         <div class="row row-top-10">
@@ -670,6 +698,34 @@
                         <img class="img-cronograma" src="img/palestrantes/maxwellalves.jpg">
                     </div>
                 </div>
+
+
+                <div class="row row-linha">
+                    <div class="col-md-10 text-left">
+                        <div class="row row-top-10">
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    14:00 às 18:00
+                                </span>
+                            </div>
+                            <div class="col-md-3">
+                                <span class="atividade">
+                                    Laboratório 2
+                                </span>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="atividade">
+                                    Oficina "O que todos os designer deveriam saber."
+                                </span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <img class="img-cronograma" src="img/palestrantes/raulFontenele.jpg">                                                
+                    </div>
+                </div>
+
 
                 <div class="row row-linha">
                     <div class="col-md-10 text-left">
@@ -859,7 +915,7 @@
                         <div class="row row-top-10">
                             <div class="col-md-3">
                                 <span class="atividade">
-                                    09:00 às 11:00
+                                    14:00 às 18:00
                                 </span>
                             </div>
                             <div class="col-md-3">
@@ -1102,6 +1158,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4" style="padding-bottom: 50px;">
+                        <img src="img/patrocinio/SobralNet.png" width="252px" class="img-patrocinio">
+                    </div>
+
+                    <div class="col-sm-4" style="padding-bottom: 50px;">
                         <img src="img/patrocinio/cie.png" width="252px" class="img-patrocinio">
                     </div>
 
@@ -1111,6 +1171,10 @@
 
                     <div class="col-sm-4" style="padding-bottom: 50px; ">
                         <img src="img/patrocinio/nortmotos.jpg" width="300px" class="img-patrocinio">
+                    </div>
+
+                    <div class="col-sm-4" style="padding-bottom: 50px; ">
+                        <img src="img/patrocinio/AutomaServ.png" width="300px" class="img-patrocinio">
                     </div>
                 </div>
             </div>
@@ -1149,7 +1213,7 @@
                     <a target="_blank" href="https://goo.gl/forms/fR0GI0vej9rrAO6v2" style="padding-right: 90px; padding-top: 20px;">
                         <button class="button-link">Inscreva-se</button>
                     </a>
-                    <a class="img-link" target="_blank" href="https://www.eventbrite.com.br/e/secomp-vii-registration-51991253238">
+                    <a class="img-link" target="_blank" href="https://goo.gl/forms/fR0GI0vej9rrAO6v2">
                         <img src="img/joven_programador.png" width="252px" style="padding-top: 30px;" />
                     </a>
                 </div>
