--- a/index.html
+++ b/index.html
@@ -1157,24 +1157,28 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4" style="padding-bottom: 50px;">
-                        <img src="img/patrocinio/SobralNet.png" width="252px" class="img-patrocinio">
-                    </div>
+                    <div class="col-lg-12">
+                        <div class="col-sm-4" style="padding-bottom: 50px;">
+                            <img src="img/patrocinio/SobralNet.png" width="252px" class="img-patrocinio">
+                        </div>
 
-                    <div class="col-sm-4" style="padding-bottom: 50px;">
-                        <img src="img/patrocinio/cie.png" width="252px" class="img-patrocinio">
-                    </div>
+                        <div class="col-sm-4" style="padding-bottom: 50px; padding-top: 10px;">
+                            <img src="img/patrocinio/cie.png" width="252px" class="img-patrocinio">
+                        </div>
 
-                    <div class="col-sm-4" style="padding-bottom: 50px; ">
-                        <img src="img/patrocinio/pcnet.jpg" width="252px" class="img-patrocinio">
+                        <div class="col-sm-4" style="padding-bottom: 50px; ">
+                            <img src="img/patrocinio/pcnet.jpg" width="252px" class="img-patrocinio">
+                        </div>                    
                     </div>
+                    
+                    <div class="col-md-12" >
+                        <div class="col-sm-4" style="padding-bottom: 50px; padding-left: 20%;">
+                            <img src="img/patrocinio/AutomaServ.png" width="250px" class="img-patrocinio">
+                        </div>
 
-                    <div class="col-sm-4" style="padding-bottom: 50px; ">
-                        <img src="img/patrocinio/nortmotos.jpg" width="300px" class="img-patrocinio">
-                    </div>
-
-                    <div class="col-sm-4" style="padding-bottom: 50px; ">
-                        <img src="img/patrocinio/AutomaServ.png" width="300px" class="img-patrocinio">
+                        <div class="col-sm-4" style="padding-bottom: 50px; padding-left: 15%;">
+                            <img src="img/patrocinio/nortmotos.jpg" width="300px" class="img-patrocinio">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1223,14 +1227,14 @@
     <!-- Fecha Inscrição-->
 
     <!-- Abre Localização -->
-    <section id="localizacao" style="height: 100%; ">
+    <section id="localizacao" class="section-map" >
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center" style="padding-bottom: 20px;">
+                <div class="col-lg-8 col-lg-offset-2 text-center" style="padding-bottom: 30px;">
                     <h2 class="section-heading">Localização</h2>
                     <hr class="verde">
                 </div>
-                <div class="col-md-6" style="padding-bottom: 15px;">
+                <div class="col-md-6" style="padding-bottom: 30px;">
                     <h3 class="section-heading">Palestras</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.5839036202433!2d-40.33978778524654!3d-3.681732343967947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac73b72080923%3A0xa63653c84ab5e6cb!2sCCS-UVA!5e0!3m2!1spt-BR!2sbr!4v1543776238865"
                         class="map-google" frameborder="0" allowfullscreen></iframe>
